# nrf-impact-assessor

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  Dockerfile.vector  Makefile  README.md  alembic.ini  compose.monitoring.yml  compose.yml  logging-dev.json  logging.json  pyproject.toml  pytest.ini  sonar-project.properties
.ai/agents/: code-reviewer.md
.ai/rules/: geospatial.md  index.md  python-fastapi.md
.ai/skills/code-review/: SKILL.md
.github/: dependabot.yml
.github/actions/run-impact-tests/: action.yml
.github/workflows/: check-pull-request.yml  dependabot-auto-lock.yml  publish-hotfix.yml  publish.yml  run-tests.yml
alembic/: env.py
alembic/versions/: 000000000001_baseline.py  000000000002_add_per_layer_tables.py  000000000003_add_data_sync_tracking.py  1bf027d04bb3_add_edp_boundary_layer_table.py  3f8c21a9e047_add_performance_indexes.py  45ce553d0710_add_gcn_spatial_layer_types.py  6a7baea82d03_initial_version.py  94839dfef894_add_data_load_history_status_detail.py  a1c4f9d02b7e_add_data_active_version.py  b2e5f0a1c9d4_add_edp_excluded_areas.py
app/: config.py  consumer.py  debug.py  main.py  orchestrator.py  test_main.py
app/assess/: _geometry.py  router.py
app/assessments/: __init__.py  gcn.py  nutrient.py  reference_data.py
app/aws/: resilience.py  s3.py  sqs.py
app/boundary/: router.py  validation.py
app/calculators/: __init__.py  buffering.py  land_use.py  suds.py  wastewater.py
app/clients/: backend_client.py  bands.py  payload_mapper.py
app/common/: auth.py  http_client.py  mongo.py  proxy_utils.py  test_http_client.py  test_log_utils.py  test_metrics.py  test_tls.py  tls.py  tracing.py
app/data_sync/: active_version.py  manifest.py  qc.py  qc_rules.py  qc_rules.yaml  restore.py  router.py  service.py
app/dlq/: models.py  router.py  service.py
app/example/: router.py  test_router.py
app/models/: __init__.py  db.py  domain.py  enums.py  geometry.py  job.py
app/outputs/: __init__.py  base.py  csv.py  csv_output.py
app/repositories/: engine.py  repository.py
app/runner/: runner.py
app/spatial/: __init__.py  assignments.py  operations.py  overlay.py  utils.py
app/test/: __init__.py  router.py
app/tiles/: router.py
app/validation/: __init__.py  development_data.py  errors.py  geometry.py  protocols.py
app/version/: router.py
app/wwtw/: router.py
changelog/: db.changelog-1.0.xml  db.changelog-1.2.xml  db.changelog-1.3.xml  db.changelog-1.4.xml  db.changelog-1.5.xml  db.changelog-1.6.xml  db.changelog.xml
changelog/changesets/: 00-baseline.xml  01-initial-schema.xml
compose/: init-timescale.sql  secrets.template  start-localstack.sh  vector.yaml
docs/: environment.md  local-data-load.md  local-testing.md
run-impact-tests/: action.yml
scripts/: .env.example  check_migration_parity.py  extract_test_fixtures.py  load_data.py  make_edp_excluded_areas_fixture.py  sample_quote_payload.json  settings.py  start_dev_server.sh  test_sqs_invalid_messages.py  test_wkt.py  update_regression_baselines.py
tests/: __init__.py  conftest.py  test_main.py
tests/common/: test_http_client.py  test_log_utils.py  test_mongo.py
tests/data/: README.md
tests/integration/: README.md  conftest.py  test_edp_excluded_areas_load.py  test_edp_excluded_areas_schema.py
tests/regression/: README.md  __init__.py  conftest.py
tests/unit/: test_calculators.py  test_config.py  test_consumer.py  test_job_models.py  test_models.py  test_orchestrator.py  test_orchestrator_provenance.py  test_resilience.py  test_sqs.py
tests/unit/api/: conftest.py  (+6 more)
(+259 files in other folders)
