[project]
name = "nrf-impact-assessor"
version = "0.1.0"
description = "nrf-impact-assessor"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "alembic-postgresql-enum>=1.9.0",
    "asgi-logger==0.1.0",
    "aws-embedded-metrics==3.5.0",
    "boto3==1.43.6",
    "dnspython==2.8.0",
    "ecs-logging==2.3.0",
    "email-validator>=2.3.0",
    "fastapi==0.136.1",
    "geoalchemy2>=0.18.3",
    "geopandas>=1.1.3",
    "moto>=5.1.22",
    "notifications-python-client>=10.0.1",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings==2.14.1",
    "pymongo[aws,encryption,snappy,zstd]==4.17.0",
    "python-multipart>=0.0.26",
    "sqlalchemy>=2.0.44",
    "typer>=0.25.1",
    "uvicorn==0.46.0",
]

[dependency-groups]
dev = [
    "moto[s3,sqs]>=5.2.1",
    "httpx==0.28.1",
    "pre-commit==4.6.0",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "pytest-mock>=3.15.1",
    "ruff==0.15.12",
    "taskipy==1.14.1",
    "boto3-stubs==1.43.6"
]


[tool.taskipy.tasks]
dev = "bash -c 'export GIT_HASH=$(git rev-parse HEAD) MONGO_URI=${MONGO_URI:-mongodb://localhost:27018/} DB_HOST=${DB_HOST:-localhost} DB_PORT=${DB_PORT:-5434} && uvicorn app.main:app --host 0.0.0.0 --port 8085 --reload'"
format = "uv run ruff format . && uv run ruff check . --fix --exit-zero"
